# Vulkan

./: CMakeLists.txt  README.md  ZsEngine.csproj  ZsEngine.sln  开发进度.md  待解决.md
Application/: App.xaml.cs
Core/: CMakeLists.txt  Core.cd  Core.vcxproj  Core.vcxproj.filters  DebugUtils.cs  EngineInfo.cs  MemoryUtils.cs  ZsEnum.cs  ZsException.cs
Core/include/: ZClass.h  ZFileManager.h  core_global.h  core_struct.h  core_util_function.h  id_generate.h
Core/source/: ZClass.cpp  ZFileManager.cpp  core_gloabl.cpp  core_struct.cpp  core_util_function.cpp  id_generate.cpp
Editor/: CMakeLists.txt  ClassDiagram.cd  Editor.vcxproj  Editor.vcxproj.filters  editor.cpp  editor.h  editor_gloabl_func.cpp  editor_global.cpp  editor_global.h  editor_global_func.h  editor_include.h
Editor/include/: base_editor.h  editor_define.h  editor_resource.h  file_editor.h  material_editor.h  scene_editor.h
Editor/source/: base_editor.cpp  editor_resource.cpp  file_editor.cpp  material_editor.cpp  scene_editor.cpp
Resource/: CMakeLists.txt  Resource.vcxproj  Resource.vcxproj.filters  ZResource.cd  resource_global.cpp  resource_global.h
Resource/include/: RCamera.h  RLight.h  RMaterial.h  RMesh.h  RModel.h  RRenderPass.h  RShader.h  RTexture.h  RVertex.h  Shader.h  ZResource.h  resource_inner_global.h  resource_preload.h  shader_uniform_struct.h
Resource/include/model/: RPlane.h  RShape.h
Resource/source/: RCamera.cpp  RLight.cpp  RMaterial.cpp  RMesh.cpp  RModel.cpp  RRenderPass.cpp  RShader.cpp  RTexture.cpp  RVertex.cpp  Shader.cpp  ZResource.cpp  resource_inner_global.cpp  resource_preload.cpp
Resource/source/model/: RPlane.cpp  RShape.cpp
Scene/: CMakeLists.txt  Scene.cd  Scene.vcxproj  Scene.vcxproj.filters  scene_include.h
Scene/include/: Scene.h
Scene/include/sub/: Camera.h  Light.h  Material.h  Mesh.h  Model.h  SubCamera.h  Texture.h  scene_inner_global.h  scene_obj.h  sub_include.h
Scene/include/sub/shape/: Cube.h  Plane.h  Shape.h  Sphere.h  shape_static_func.h
Scene/source/: Scene.cpp
Scene/source/sub/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  SubCamera.cpp  Texture.cpp
Scene/source/sub/shape/: Cube.cpp  Plane.cpp  Shape.cpp  Sphere.cpp  shape_static_func.cpp
Test/: CMakeLists.txt  Test.vcxproj  imgui.ini  test.cpp
ThirdPartyManager/: CMakeLists.txt  Config.cs  Manager.cs  SDLException.cs  SDLManager.cs  Test.cs  ThirdPartyManager.csproj  ThirdPartyManager.vcxproj  ThirdPartyManager.vcxproj.filters  VulkanException.cs  VulkanManager.cs  dllmain.cpp  third_party_manager.cd  third_party_manager_global.cpp  third_party_manager_global.h
ThirdPartyManager/assimpParty/include/: assimp_party_manager.h
ThirdPartyManager/assimpParty/source/: assimp_party_manager.cpp
ThirdPartyManager/common/include/: _debug_func.h  math_util.h  third_party_manager.h
ThirdPartyManager/common/source/: _debug_func.cpp  math_util.cpp  third_party_manager.cpp
ThirdPartyManager/core/common/include/: compute_info.h  debug_to_console.h
ThirdPartyManager/core/common/source/: compute_info.cpp  debug_to_console.cpp
ThirdPartyManager/core/info/include/: application_window_info.h  global_info.h
ThirdPartyManager/core/info/source/: application_window_info.cpp  global_info.cpp
ThirdPartyManager/imguiParty/include/: imgui_material_editor.h  imgui_party_manager.h  imgui_utils.h
ThirdPartyManager/imguiParty/source/: imgui_material_editor.cpp  imgui_party_manager.cpp  imgui_utils.cpp
ThirdPartyManager/jsoncppParty/include/: jsoncpp_party_manager.h
ThirdPartyManager/jsoncppParty/source/: jsoncpp_party_manager.cpp
ThirdPartyManager/sdlParty/include/: sdl_party_manager.h
ThirdPartyManager/sdlParty/source/: sdl_party_manager.cpp
ThirdPartyManager/utils/: utils.cpp  utils.h
ThirdPartyManager/vkParty/include/: vk_allocator.h  vk_allocator_test.h  vk_party_manager.h  vk_shader_compiler_dxc.h  vk_struct.h  vk_util_function.h
ThirdPartyManager/vkParty/include/vkobject/: vk_buffer.h  vk_command_buffer.h  vk_descriptor_set.h  vk_fence.h  vk_frame_buffer.h  vk_image.h  vk_image_view.h  vk_index_buffer.h  vk_object.h  vk_pipeline.h  vk_pipeline_layout.h  vk_queue.h  vk_render_pass.h  vk_sampler.h  vk_semaphore.h  vk_shader_compiler.h  vk_slot.h  vk_slot_data.h  vk_subpass.h  vk_texture.h  vk_texture_ext.h  vk_uniform_buffer.h  vk_vertex_buffer.h
ThirdPartyManager/vkParty/source/: vk_allocator.cpp  vk_allocator_test.cpp  vk_party_manager.cpp  vk_util_function.cpp
ThirdPartyManager/vkParty/source/vkobject/: vk_buffer.cpp  vk_command_buffer.cpp  vk_descriptor_set.cpp  vk_fence.cpp  vk_frame_buffer.cpp  vk_image.cpp  vk_image_view.cpp  vk_index_buffer.cpp  vk_object.cpp  vk_pipeline.cpp  vk_pipeline_layout.cpp  vk_queue.cpp  vk_render_pass.cpp  vk_sampler.cpp  vk_semaphore.cpp  vk_shader_compiler.cpp  vk_slot.cpp  vk_slot_data.cpp  vk_subpass.cpp  vk_texture.cpp  vk_texture_ext.cpp  vk_uniform_buffer.cpp  vk_vertex_buffer.cpp
WpfUI/: MainWindow.xaml.cs  WpfUI.csproj
main/: main.cpp  main.vcxproj  main.vcxproj.filters
main/include/: application.h
报告/: 208813-潜森伟-软件工程-中期报告.doc  208813-潜森伟-软件工程-任务书.doc  208813-潜森伟-软件工程-前期报告.doc  208813-潜森伟-软件工程-基于Vulkan的软渲染引擎的设计与实现.docx  208813-潜森伟-软件工程-审题表.doc  ZSEngine.pptx
